[package]
name = "tinted_luau_sys"
version = "0.1.2"
edition = "2024"
license = "MIT"
repository = "https://github.com/tinted-software/luau-rs"
description = "Luau bindings for Rust"
build = "rust/build.rs"

[lib]
name = "luau_sys"
path = "rust/lib.rs"

[build-dependencies]
# TODO: depends on a relase of bindgen, see https://github.com/rust-lang/rust-bindgen/commit/2426dd68cd12e0ac022bca18efb9c7d0acd27e12
bindgen = { git = "https://github.com/rust-lang/rust-bindgen/" }
pkg-config = "0.3.32"

[[example]]
name = "hello"
path = "rust/examples/hello.rs"

[features]
default = ["std"]
std = []
